docs-archive/apache-airflow-providers-snowflake/6.12.2/_sources/_api/airflow/providers/snowflake/hooks/snowflake_sql_api/index.rst.txt
airflow.providers.snowflake.hooks.snowflake_sql_api
===================================================

.. py:module:: airflow.providers.snowflake.hooks.snowflake_sql_api


Classes
-------

.. autoapisummary::

   airflow.providers.snowflake.hooks.snowflake_sql_api.SnowflakeSqlApiHook


Module Contents
---------------

.. py:class:: SnowflakeSqlApiHook(snowflake_conn_id, token_life_time = LIFETIME, token_renewal_delta = RENEWAL_DELTA, api_retry_args = None, http_request_kwargs = None, aiohttp_session_kwargs = None, aiohttp_request_kwargs = None, *args, **kwargs)

   Bases: :py:obj:`airflow.providers.snowflake.hooks.snowflake.SnowflakeHook`


   A client to interact with Snowflake using SQL API and submit multiple SQL statements in a single request.

   In combination with aiohttp, make post request to submit SQL statements for execution,
   poll to check the status of the execution of a statement. Fetch query results asynchronously.

   This hook requires the snowflake_conn_id connection. This hook mainly uses account, schema, database,
   warehouse, and an authentication mechanism from one of the following:

   1. JWT Token generated from ``private_key_file`` or ``private_key_content``. Other inputs can be
      defined in the connection or hook instantiation.
   2. OAuth Token generated from the ``refresh_token``, ``client_id`` and ``client_secret`` specified
      in the connection.
   3. PAT (Programmatic Access Token): set ``authenticator`` to ``programmatic_access_token`` in the
      connection extras and put the PAT value in the connection ``password`` field.

   :param snowflake_conn_id: Reference to
       :ref:`Snowflake connection id<howto/connection:snowflake>`
   :param account: snowflake account name
   :param authenticator: authenticator for Snowflake.
       'snowflake' (default) to use the internal Snowflake authenticator
       'externalbrowser' to authenticate using your web browser and
       Okta, ADFS or any other SAML 2.0-compliant identify provider
       (IdP) that has been defined for your account
       'https://<your_okta_account_name>.okta.com' to authenticate
       through native Okta.
   :param warehouse: name of snowflake warehouse
   :param database: name of snowflake database
   :param region: name of snowflake region
   :param role: name of snowflake role
   :param schema: name of snowflake schema
   :param session_parameters: You can set session-level parameters at
       the time you connect to Snowflake
   :param token_life_time: lifetime of the JWT Token in timedelta
   :param token_renewal_delta: Renewal time of the JWT Token in timedelta
   :param deferrable: Run operator in the deferrable mode.
   :param api_retry_args: An optional dictionary with arguments passed to ``tenacity.Retrying`` & ``tenacity.AsyncRetrying`` classes.
   :param http_request_kwargs: Optional keyword arguments forwarded to ``requests.Session.request`` for synchronous HTTP calls.
       Request-defining fields (e.g. ``method``, ``url``, ``headers``, ``params``, ``json``)
       are owned by the hook and must not be provided here.

   :param aiohttp_session_kwargs: Optional keyword arguments forwarded to
       ``aiohttp.ClientSession`` for asynchronous HTTP calls.
       Session-owned fields like ``headers`` are managed by the hook
       and must not be overridden here.

   :param aiohttp_request_kwargs: Optional keyword arguments forwarded to
       ``aiohttp.ClientSession.request`` for asynchronous HTTP calls.
       Request identity fields (e.g. ``method``, ``url``, ``headers``,
       ``params``) are owned by the hook and must not be overridden here.


   .. py:attribute:: LIFETIME


   .. py:attribute:: RENEWAL_DELTA


   .. py:attribute:: HTTP_REQUEST_KWARGS_GUARD_KEYS
      :type:  set[str]


   .. py:attribute:: AIOHTTP_SESSION_KWARGS_GUARD_KEYS
      :type:  set[str]


   .. py:attribute:: AIOHTTP_REQUEST_KWARGS_GUARD_KEYS
      :type:  set[str]


   .. py:attribute:: snowflake_conn_id


   .. py:attribute:: token_life_time


   .. py:attribute:: token_renewal_delta


   .. py:attribute:: private_key
      :type:  Any
      :value: None



   .. py:attribute:: retry_config


   .. py:attribute:: http_request_kwargs


   .. py:attribute:: aiohttp_session_kwargs


   .. py:attribute:: aiohttp_request_kwargs


   .. py:method:: execute_query(sql, statement_count, query_tag = '', bindings = None)

      Run the query in Snowflake using SnowflakeSQL API by making API request.

      :param sql: the sql string to be executed with possibly multiple statements
      :param statement_count: set the MULTI_STATEMENT_COUNT field to the number of SQL statements
          in the request. Set to 0 to submit a variable number of SQL statements without specifying
          the exact count.
      :param query_tag: (Optional) Query tag that you want to associate with the SQL statement.
          For details, see https://docs.snowflake.com/en/sql-reference/parameters.html#label-query-tag
          parameter.
      :param bindings: (Optional) Values of bind variables in the SQL statement.
          When executing the statement, Snowflake replaces placeholders (? and :name) in
          the statement with these specified values.



   .. py:method:: get_headers()

      Form auth headers based on OAuth token, PAT, or JWT token from private key.



   .. py:method:: get_oauth_token(conn_config = None, token_endpoint = None, grant_type = 'refresh_token')

      Generate temporary OAuth access token using refresh token in connection details.



   .. py:method:: get_request_url_header_params(query_id, url_suffix = None)

      Build the request header Url with account name identifier and query id from the connection params.

      :param query_id: statement handles query ids for the individual statements.
      :param url_suffix: Optional path suffix to append to the URL. Must start with '/', e.g. '/cancel' or '/result'.



   .. py:method:: check_query_output(query_ids)

      Make HTTP request to snowflake SQL API based on the provided query ids and log the response.

      :param query_ids: statement handles query id for the individual statements.



   .. py:method:: get_sql_api_query_status(query_id)

      Based on the query id async HTTP request is made to snowflake SQL API and return response.

      :param query_id: statement handle id for the individual statements.



   .. py:method:: wait_for_query(query_id, raise_error = False, poll_interval = 5, timeout = 60)

      Wait for query to finish either successfully or with error.

      :param query_id: statement handle id for the individual statement.
      :param raise_error: whether to raise an error if the query failed.
      :param poll_interval: time (in seconds) between checking the query status.
      :param timeout: max time (in seconds) to wait for the query to finish before raising a TimeoutError.

      :raises RuntimeError: If the query status is 'error' and `raise_error` is True.
      :raises TimeoutError: If the query doesn't finish within the specified timeout.



   .. py:method:: get_result_from_successful_sql_api_query(query_id)

      Based on the query id HTTP requests are made to snowflake SQL API and return result data.

      :param query_id: statement handle id for the individual statement.

      :raises RuntimeError: If the query status is not 'success'.



   .. py:method:: get_sql_api_query_status_async(query_id)
      :async:


      Based on the query id async HTTP request is made to snowflake SQL API and return response.

      :param query_id: statement handle id for the individual statements.



   .. py:method:: cancel_queries(query_ids)


